2024-09-16  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptex-base.ch: Use constants enc_jis and enc_ucs.
	* ptex-{ctrlsym,prntknj,ucs}.test,
	tests/{control-symbol,ctrlsym,endlinechar,printkanji,ucs}.tex,
	tests/{ctrlsym,endline,jctrlsym,pknj-{e,s},ucs-{e,s}).log,
	tests/p-{endline,jctrlsym,pknj-{e,s}}a.typ:
	Add regression tests by using Kitagawa-san's sample files.
	* am/ptex.am: Adjust.

2024-05-18  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: Enable to get character codes
	from control symbols by using backquote "`".
	https://github.com/texjporg/tex-jp-build/issues/167

2024-04-14  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptriptest.test:
	Filter Web2C year/dev in banner.

2024-03-10  Karl Berry  <karl@tug.org>

	* TL'24 release.

2023-12-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test:
	Avoid errors on parallel test processing.

2023-11-25  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test: Add tests for --recorder and *.fls.
	https://github.com/texjporg/tex-jp-build/issues/45

2023-11-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptriptest.test:
	Check diffs of trip.{fot,typ} with ignoring trivial changes
	in trip tests.

2023-09-17  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ptex-base.ch: Support more than 256 different glue/kern.
	* ptex_version.h: Version p4.1.1.

2023-09-03  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {ptriptest,pver}.test:
	Update tests for Windows.

2023-08-22  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ptex-base.ch: Clean up unnecessary lines.

2023-08-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {ptriptest,pver,wcfname,zfmtcompress}.test:
	Make easier to test on Windows.

2023-04-15  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: Update last_jchr in unpackage.
	https://github.com/texjporg/tex-jp-build/issues/156

2023-03-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test:
	Skip tests for Shift_JIS & EUC-JP if conversion failed.
	Report from Ken Moffat.