@@ -1305,10 +1305,11 @@ for k:=0 to 255 do
   begin cat_code(k):=other_char; kcat_code(k):=other_kchar;
   math_code(k):=hi(k); sf_code(k):=1000;
   auto_xsp_code(k):=0;
+  inhibit_xsp_type(k):=0; kinsoku_type(k):=0;
   end;
 for k:=0 to 1023 do
-  begin inhibit_xsp_code(k):=0; inhibit_xsp_type(k):=0;
-  kinsoku_code(k):=0; kinsoku_type(k):=0;
+  begin inhibit_xsp_code(k):=0;
+  kinsoku_code(k):=0;
   end;
 @z
 @x [17.232] l.4971 - pTeX: initialize cat_code, cur_jfont, cur_tfont
