@@ -14,7 +14,7 @@ TEXINPUTS=".;$srcdir/tests"; export TEXINPUTS
 TEXFONTS=".;$srcdir//tests"; export TEXFONTS
 TEXFORMATS=.; export TEXFORMATS
 
-rm -f p-ctrlsym.tex p-endline*.* p-jctrlsym*.*
+rm -f p-ctrlsym.tex p-endline*.* p-jctrlsym*.* p-chartoken.* p-lineend.*
 
 if test ! -f ./p-basic.tex; then
   cp $srcdir/tests/dump-basic.tex ./p-basic.tex
@@ -56,4 +56,22 @@ diff $srcdir/ptexdir/tests/jctrlsym.log p-jctrlsym.out || exit 6
 $_updvitype ./p-jctrlsym.dvi >ptests/xp-jctrlsym.typ
 sed "1d;s/TeX output 20[23].\...\...:.*'/TeX output 20XX.XX.XX'/" ptests/xp-jctrlsym.typ >ptests/xp-jctrlsyma.typ
 diff $srcdir/ptexdir/tests/p-jctrlsyma.typ ptests/xp-jctrlsyma.typ || exit 7
+
+
+# let_char_token.tex
+$LN_S $srcdir/ptexdir/tests/let_char_token.tex ./p-chartoken.tex
+$_ptex -fmt=p-basic-euc -interaction=batchmode p-chartoken.tex || :
+
+sed 1d p-chartoken.log >p-chartoken.out
+
+diff $srcdir/ptexdir/tests/chartoken.log p-chartoken.out || exit 8
+
+
+# ptexlineendmode.tex
+$LN_S $srcdir/ptexdir/tests/ptexlineendmode.tex ./p-lineend.tex
+$_ptex -fmt=p-basic-euc -kanji=utf8 -interaction=batchmode p-lineend.tex || :
+
+$_updvitype -kanji=utf8 ./p-lineend.dvi >ptests/xp-lineend.typ
+sed "1d;s/TeX output 20[23].\...\...:.*'/TeX output 20XX.XX.XX'/" ptests/xp-lineend.typ >ptests/xp-lineenda.typ
+diff $srcdir/ptexdir/tests/p-lineenda.typ ptests/xp-lineenda.typ || exit 9
 
